# UrbanAnalyst

./: .eslintignore  .eslintrc.json  .gitignore  .prettierc  LICENSE  Makefile  README.md  jsdoc.conf.json  next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  wasm.d.ts
.github/workflows/: tests.yml
data/berlin/: data.json
pkg/: package.json  uamutations.d.ts  uamutations.js  uamutations_bg.wasm  uamutations_bg.wasm.d.ts
public/data/: citydata.json  test.aes  ua-index-city-vars.json  ua-index.json
public/pkg/: uamutations_bg.wasm
src/: test-setup.ts
src/app/: layout.tsx  opengraph-image.tsx  page.test.tsx  page.tsx  sitemap.ts
src/components/: appBar.test.tsx  appBar.tsx  buttons.tsx  buttons2.tsx  buttons3.tsx  buttons4.tsx  buttons5.tsx  citydata.tsx  citylist.tsx  control.tsx  explain-layer.tsx  explainLayer.test.ts  explainLayer.tsx  headingText.test.ts  headingText.tsx  heading_text.tsx  helpButton.test.tsx  helpButton.tsx  interfaces.tsx  layerlist.tsx  legend.tsx  map.tsx  palettes.tsx  slider.tsx  tourClass.tsx  tourPositionControls.test.tsx  tourPositionControls.tsx  uaSvgLogo.tsx  window-size.tsx  windowSize.test.tsx  windowSize.tsx
src/context/: GlobalStateContext.tsx
src/data/: citydata.tsx  interfaces.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: Home.module.css  about.module.css  buttons.module.css  compare.module.css  controls.module.css  globals.css  legend.module.css  (+8 more)
wasm/: Cargo.toml
wasm/src/: calculate_dists.rs  lib.rs  mlr.rs  read_write_file.rs  transform.rs  utils.rs
(+198 files in other folders)
