[package]
name = "uamutations"
version = "0.1.0"
authors = ["Mark Padgham <mark.padgham@email.com>"]
edition = "2021"
repository = "https://github.com/UrbanAnalyst/uamutations"
license = "MIT"
description = "Implementation of the mutation algorithm for Urban Analyst."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
approx = "0.5.1"
nalgebra = "0.32.3"
serde_json = "1.0"
wasm-bindgen = "0.2.88"
getrandom = { version = "0.2", features = ["js"] }
libc = "0.2.150"
serde-wasm-bindgen = "0.6.1"
